added lots of weapon qualities
fixed a bug with npcs and fatigue, added regen

--- a/templates/actor/actor-corruption.html
+++ b/templates/actor/actor-corruption.html
@@ -46,34 +46,54 @@
         </div>
     </div>
     <div class="corruption flexcol">
-        <div class="corr-item flexrow">
-            <label>Insanity:</label>
-            <input type="text" name="data.secChar.insanity.value" value="{{data.secChar.insanity.value}}">
+        <div class="corruption flexcol">
+            <div class="corr-item flexrow">
+                <label>Insanity:</label>
+                <input type="text" name="data.secChar.insanity.value" value="{{data.secChar.insanity.value}}">
+            </div>
+            <div class="corr-item flexrow">
+                <label>Shock Test Modifier:</label>
+                <input type="text" name="data.secChar.insanity.mod" value="{{data.secChar.insanity.mod}}">
+            </div>
+            <div class="corr-item flexrow">
+                <label>Shock:</label>
+                <input type="text" name="data.secChar.shock" value="{{data.secChar.insanity.shock}}">
+            </div>
+            <a class="corr-item item-create button" data-type="disorder" title="Add new disorder">Add Disorder</a>
+            <div class="list list3col grid grid-3col">
+                <span class="list-item">Name</span>
+                <span class="list-button"></span>
+                <span class="list-button"></span>
+                {{#each actor.disorders as |d key|}}
+
+                <a class="item-descr list-item" data-name="{{d.name}}" data-item-descr="{{d.data.description.value}}">{{d.name}}</a>
+                <a class="list-button item-edit" title="Edit Disorder" data-item-id="{{d._id}}"></a>
+                <a class="list-button item-delete" title="Delete Disorder" data-item-id="{{d._id}}"></a>
+
+
+
+                {{/each}}
+
+            </div>
         </div>
-        <div class="corr-item flexrow">
-            <label>Shock Test Modifier:</label>
-            <input type="text" name="data.secChar.insanity.mod" value="{{data.secChar.insanity.mod}}">
+        <div class="corruption flexcol">
+            <a class="corr-item item-create button" data-type="injury" title="Add new Injury">Add Injury</a>
+            <div class="list list3col grid grid-3col">
+                <span class="list-item">Name</span>
+                <span class="list-button"></span>
+                <span class="list-button"></span>
+               
+                {{#each actor.injuries as |m key|}}
+
+                <a class="item-descr list-item" data-name="{{m.name}}" data-item-descr="{{m.data.description.value}}">{{m.name}}</a>
+                <a class="list-button item-edit" title="Edit Malignancy" data-item-id="{{m._id}}"></a>
+                <a class="list-button item-delete" title="Delete Malignancy" data-item-id="{{m._id}}"></a>
+
+
+
+                {{/each}}
+
+            </div>
         </div>
-        <div class="corr-item flexrow">
-            <label>Shock:</label>
-            <input type="text" name="data.secChar.shock" value="{{data.secChar.insanity.shock}}">
-        </div>
-        <a class="corr-item item-create button" data-type="disorder" title="Add new disorder">Add Disorder</a>
-        <div class="list list3col grid grid-3col">
-            <span class="list-item">Name</span>
-            <span class="list-button"></span>
-            <span class="list-button"></span>
-            {{#each actor.disorders as |d key|}}
-
-            <a class="item-descr list-item" data-name="{{d.name}}" data-item-descr="{{d.data.description.value}}">{{d.name}}</a>
-            <a class="list-button item-edit" title="Edit Disorder" data-item-id="{{d._id}}"></a>
-            <a class="list-button item-delete" title="Delete Disorder" data-item-id="{{d._id}}"></a>
-
-
-
-            {{/each}}
-
-        </div>
-
     </div>
 </div>
