--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -14,7 +14,7 @@
             <a class="item" data-tab="combat">COMBAT</a>
             <a class="item" data-tab="gear">GEAR & CYBERNETICS</a>
             <a class="item" data-tab="psykana">PSYKANA</a>
-            <a class="item" data-tab="corruption">CORRUPTION & INSANITY</a>
+            <a class="item" data-tab="corruption">CORRUPTION & INSANITY & INJURY</a>
             
         </nav>
 
