--- a/templates/actor/actorDH-main.html
+++ b/templates/actor/actorDH-main.html
@@ -18,7 +18,7 @@
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Race:</span>
-                <input name="data.race.value" type="text" value="{{data.race.value}}" placeholder="Astartes"/>
+                <input name="data.race.value" type="text" value="{{data.race.value}}" placeholder="Human"/>
             </div>
 
             <div class="descrRow flexcol">
@@ -28,7 +28,7 @@
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Hair:</span>
-                <input name="data.hair.value" type="text" value="{{data.hair.value}}" placeholder="bald"/>
+                <input name="data.hair.value" type="text" value="{{data.hair.value}}" placeholder="??"/>
             </div>
 
             <div class="descrRow flexcol">
@@ -51,8 +51,8 @@
         </div>
         <div class="descr grid grid-3col">
             <div class="descrRow flexcol">
-                <span class="descrSpan">Chapter:</span>
-                <input name="data.chapter.value" type="text" value="{{data.chapter.value}}" placeholder="???"/>
+                <span class="descrSpan">Homeworld:</span>
+                <input name="data.homeworld.value" type="text" value="{{data.homeWorld.value}}" placeholder="???"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Background:</span>
@@ -65,9 +65,11 @@
 
         </div>
         <div class="eliteAdvances flexcol">
-
-            <span class="descrSpan">Elite Advances:</span>
-            <input name="data.eliteAdvances.value" type="text" value="{{data.eliteAdvances.value}}" placeholder="???"/>
+            <div><span class="descrSpan">Elite Advances:</span>
+            <input name="data.eliteAdvances.value" type="text" value="{{data.eliteAdvances.value}}" placeholder="???"/></div>
+            <div><span class="descrSpan">Divination:</span>
+            <input name="data.divination.value" type="text" value="{{data.divination.value}}" placeholder="???"/></div>
+            
 
         </div>
         <div class="resources flexrow">
@@ -112,7 +114,6 @@
             </div>
         </div>
 
-    
         <div class="characteristics grid grid-10col">
 
 
