--- a/templates/item/dialogs/weapon-special-dialog.html
+++ b/templates/item/dialogs/weapon-special-dialog.html
@@ -1,9 +1,9 @@
 
 <div class="grid grid-2col">
-    
+   
 {{#each specials}}
     <div class="special-list">
-        <label>{{this.label}}</label>
+        <label title="{{this.description}}">{{this.label}}</label>
         <input type="checkbox" class="weapon-special" id="{{@key}}" {{checked this.value}}>
         {{#if (isdefined this.num)}}
         <input type="number" class="weapon-special-number" id="{{@key}}num" value="{{this.num}}">
