--- a/templates/item/item-ammunition-sheet.html
+++ b/templates/item/item-ammunition-sheet.html
@@ -31,7 +31,7 @@
         </div>
        
         <div class="flexrow">
-            <label>Default:</label>
+            <label>Default Ammunition?:</label>
             <input type="checkbox" name="data.default.value" {{checked data.default.value}}>
         </div>
         {{#unless data.default.value}}
