Fixed bug with dark eheresy sheet

--- a/templates/actor/actorDH-main.html
+++ b/templates/actor/actorDH-main.html
@@ -62,7 +62,7 @@
         <div class="descr grid grid-3col">
             <div class="descrRow flexcol">
                 <span class="descrSpan">Homeworld:</span>
-                <input name="data.homeworld.value" type="text" value="{{data.homeWorld.value}}" placeholder="???"/>
+                <input name="data.homeWorld.value" type="text" value="{{data.homeWorld.value}}" placeholder="???"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Background:</span>
