More dh sheet stuff
added sex field and fixed display issue with the race select box

--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -208,6 +208,7 @@
 }
 .fortyk .sheet-main .header-fields .descr .raceSelect{
     flex:auto;
+    height: 25px;
 }
 .fortyk .sheet-main .header-fields .descr input[type="text"]{
     height: 25px !important;
