--- a/templates/actor/actorDH-sheet.html
+++ b/templates/actor/actorDH-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} flexcol" autocomplete="off">
+<form class="{{cssClass}} charSheet flexcol" autocomplete="off">
 
     {{!-- Sheet Header --}}
     <header class="sheet-header flexrow">
