--- a/templates/item/item-talentntrait-sheet.html
+++ b/templates/item/item-talentntrait-sheet.html
@@ -4,8 +4,28 @@
         <input type="text" value="{{item.name}}" name="name">
     </div>
     <div class="flexcol">
+        <label>Tier:</label>
+        <input type="text" value="{{data.tier.value}}" name="data.tier.value">
+    </div>
+    <div class="flexcol">
+        <label>Prerequisites:</label>
+        <input type="text" value="{{data.prereqs.value}}" name="data.prereqs.value">
+    </div>
+    <div class="flexcol">
         <label>Aptitudes:</label>
         <input type="text" value="{{data.aptitudes.value}}" name="data.aptitudes.value">
+    </div>
+    <div class="flexcol">
+        <label>Specialisation:</label>
+        <input type="text" value="{{data.specialisation.value}}" name="data.specialisation.value">
+    </div>
+    <div class="flexcol">
+        <label>Tags:</label>
+        <input type="text" value="{{data.tags.value}}" name="data.tags.value">
+    </div>
+    <div class="flexcol">
+        <label>Flag Id:</label>
+        <input type="text" value="{{data.flagId.value}}" name="data.flagId.value">
     </div>
     <div class="item-description">
         <label>Description:</label>
