first implementation of new talent interface
need to make the specialisations work

--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -4,7 +4,7 @@
 <div class="skills flexcol">
    
     <div class="flexrow">
-        <input type="text"  id="skillfilter" class="filter" placeholder="Search...">
+        <input type="text"  id="skillfilter" class="skillfilter" placeholder="Search...">
         <a class="item-create button" data-type="skill" title="Add new skill">New Skill</a>
     </div>
 
