--- a/templates/actor/actor-tnt.html
+++ b/templates/actor/actor-tnt.html
@@ -1,5 +1,5 @@
 <div class="tnt flexcol">
-    <a class="item-create button" data-type="talentntrait" title="Add a new Talent or Trait">Add Talent or Trait</a>
+    <a class="tnt-create button" data-type="talentntrait" title="Add a new Talent or Trait">Add Talent or Trait</a>
     <div class="list list3col grid grid-3col">
         <span class="list-item">Name</span>
         <span class="list-button"></span>
