--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -22,6 +22,32 @@
 
 
 }
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+ .tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
 
 .button:hover, .button:focus {
     color: #000;
@@ -275,6 +301,7 @@
 .fortyk .sheet-body .tab,
 .fortyk .sheet-body .tab .editor {
     height: 100%;
+    overflow: auto;
 }
 .fortyk .sheet-body{
     flex: 1;
