--- a/templates/actor/actor-tnt.html
+++ b/templates/actor/actor-tnt.html
@@ -6,7 +6,7 @@
         <span class="list-button"></span>
         {{#each actor.talentsntraits as |t key|}}
         
-            <a class="item-descr list-item" data-name="{{t.name}}" data-item-descr="{{t.data.description.value}}">{{t.name}}</a>
+            <a class="item-descr list-item" data-name="{{t.name}}" data-item-descr="{{t.data.description.value}}">{{t.name}}{{#unless (compareString "N/A" t.data.specialisation.value)}} ({{t.data.specialisation.value}}){{/unless}} </a>
             <a class="list-button item-edit" title="Edit" data-item-id="{{t._id}}"></a>
             <a class="list-button item-delete" title="Delete" data-item-id="{{t._id}}"></a>
         
